p6/y.output
Terminals which are not used

   T_PLUS_PLUS
   T_MINUS_MINUS
   T_ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list block_list

    2 declaration_list: declaration_list declaration
    3                 | empty

    4 declaration: variable_declaration T_SEMIC
    5            | object_declaration T_SEMIC
    6            | forward_declaration T_SEMIC

    7 variable_declaration: simple_type T_ID optional_initializer
    8                     | simple_type T_ID T_LBRACKET expression T_RBRACKET

    9 simple_type: T_INT
   10            | T_DOUBLE
   11            | T_STRING

   12 optional_initializer: T_ASSIGN expression
   13                     | empty

   14 @1: /* empty */

   15 object_declaration: object_type T_ID T_LPAREN @1 parameter_list_or_empty T_RPAREN
   16                   | object_type T_ID T_LBRACKET expression T_RBRACKET

   17 object_type: T_TRIANGLE
   18            | T_PIXMAP
   19            | T_CIRCLE
   20            | T_RECTANGLE
   21            | T_TEXTBOX

   22 parameter_list_or_empty: parameter_list
   23                        | empty

   24 parameter_list: parameter_list T_COMMA parameter
   25               | parameter

   26 parameter: T_ID T_ASSIGN expression

   27 forward_declaration: T_FORWARD T_ANIMATION T_ID T_LPAREN animation_parameter T_RPAREN

   28 block_list: block_list block
   29           | empty

   30 block: initialization_block
   31      | animation_block
   32      | on_block

   33 initialization_block: T_INITIALIZATION statement_block

   34 @2: /* empty */

   35 animation_block: T_ANIMATION T_ID T_LPAREN check_animation_parameter T_RPAREN T_LBRACE @2 statement_list T_RBRACE end_of_statement_block

   36 animation_parameter: object_type T_ID

   37 check_animation_parameter: T_TRIANGLE T_ID
   38                          | T_PIXMAP T_ID
   39                          | T_CIRCLE T_ID
   40                          | T_RECTANGLE T_ID
   41                          | T_TEXTBOX T_ID

   42 on_block: T_ON keystroke statement_block

   43 keystroke: T_SPACE
   44          | T_UPARROW
   45          | T_DOWNARROW
   46          | T_LEFTARROW
   47          | T_RIGHTARROW
   48          | T_LEFTMOUSE_DOWN
   49          | T_MIDDLEMOUSE_DOWN
   50          | T_RIGHTMOUSE_DOWN
   51          | T_LEFTMOUSE_UP
   52          | T_MIDDLEMOUSE_UP
   53          | T_RIGHTMOUSE_UP
   54          | T_MOUSE_MOVE
   55          | T_MOUSE_DRAG
   56          | T_AKEY
   57          | T_SKEY
   58          | T_DKEY
   59          | T_FKEY
   60          | T_HKEY
   61          | T_JKEY
   62          | T_KKEY
   63          | T_LKEY
   64          | T_WKEY
   65          | T_F1

   66 if_block: statement_block_creator statement end_of_statement_block
   67         | statement_block

   68 statement_block: T_LBRACE statement_block_creator statement_list T_RBRACE end_of_statement_block

   69 statement_block_creator: /* empty */

   70 end_of_statement_block: /* empty */

   71 statement_list: statement_list statement
   72               | empty

   73 statement: if_statement
   74          | for_statement
   75          | assign_statement T_SEMIC
   76          | print_statement T_SEMIC
   77          | exit_statement T_SEMIC

   78 if_statement: T_IF T_LPAREN expression T_RPAREN if_block
   79             | T_IF T_LPAREN expression T_RPAREN if_block T_ELSE if_block

   80 for_statement: T_FOR T_LPAREN statement_block_creator assign_statement end_of_statement_block T_SEMIC expression T_SEMIC statement_block_creator assign_statement end_of_statement_block T_RPAREN statement_block

   81 print_statement: T_PRINT T_LPAREN expression T_RPAREN

   82 exit_statement: T_EXIT T_LPAREN expression T_RPAREN

   83 assign_statement: variable T_ASSIGN expression
   84                 | variable T_PLUS_ASSIGN expression
   85                 | variable T_MINUS_ASSIGN expression

   86 variable: T_ID
   87         | T_ID T_LBRACKET expression T_RBRACKET
   88         | T_ID T_PERIOD T_ID
   89         | T_ID T_LBRACKET expression T_RBRACKET T_PERIOD T_ID

   90 expression: primary_expression
   91           | expression T_OR expression
   92           | expression T_AND expression
   93           | expression T_LESS_EQUAL expression
   94           | expression T_GREATER_EQUAL expression
   95           | expression T_LESS expression
   96           | expression T_GREATER expression
   97           | expression T_EQUAL expression
   98           | expression T_NOT_EQUAL expression
   99           | expression T_PLUS expression
  100           | expression T_MINUS expression
  101           | expression T_ASTERISK expression
  102           | expression T_DIVIDE expression
  103           | expression T_MOD expression
  104           | T_MINUS expression
  105           | T_NOT expression
  106           | math_operator T_LPAREN expression T_RPAREN
  107           | variable geometric_operator variable

  108 primary_expression: T_LPAREN expression T_RPAREN
  109                   | variable
  110                   | T_INT_CONSTANT
  111                   | T_TRUE
  112                   | T_FALSE
  113                   | T_DOUBLE_CONSTANT
  114                   | T_STRING_CONSTANT

  115 geometric_operator: T_TOUCHES
  116                   | T_NEAR

  117 math_operator: T_SIN
  118              | T_COS
  119              | T_TAN
  120              | T_ASIN
  121              | T_ACOS
  122              | T_ATAN
  123              | T_SQRT
  124              | T_ABS
  125              | T_FLOOR
  126              | T_RANDOM

  127 empty: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INT (258) 9
T_DOUBLE (259) 10
T_STRING (260) 11
T_TRIANGLE (261) 17 37
T_PIXMAP (262) 18 38
T_CIRCLE (263) 19 39
T_RECTANGLE (264) 20 40
T_TEXTBOX (265) 21 41
T_FORWARD (266) 27
T_INITIALIZATION (267) 33
T_TRUE (268) 111
T_FALSE (269) 112
T_ON (270) 42
T_SPACE (271) 43
T_LEFTARROW (272) 46
T_RIGHTARROW (273) 47
T_UPARROW (274) 44
T_DOWNARROW (275) 45
T_LEFTMOUSE_DOWN (276) 48
T_MIDDLEMOUSE_DOWN (277) 49
T_RIGHTMOUSE_DOWN (278) 50
T_LEFTMOUSE_UP (279) 51
T_MIDDLEMOUSE_UP (280) 52
T_RIGHTMOUSE_UP (281) 53
T_MOUSE_MOVE (282) 54
T_MOUSE_DRAG (283) 55
T_F1 (284) 65
T_AKEY (285) 56
T_SKEY (286) 57
T_DKEY (287) 58
T_FKEY (288) 59
T_HKEY (289) 60
T_JKEY (290) 61
T_KKEY (291) 62
T_LKEY (292) 63
T_WKEY (293) 64
T_TOUCHES (294) 115
T_NEAR (295) 116
T_ANIMATION (296) 27 35
T_IF (297) 78 79
T_FOR (298) 80
T_ELSE (299) 79
T_EXIT (300) 82
T_LPAREN (301) 15 27 35 78 79 80 81 82 106 108
T_RPAREN (302) 15 27 35 78 79 80 81 82 106 108
T_LBRACE (303) 35 68
T_RBRACE (304) 35 68
T_LBRACKET (305) 8 16 87 89
T_RBRACKET (306) 8 16 87 89
T_SEMIC (307) 4 5 6 75 76 77 80
T_COMMA (308) 24
T_PERIOD (309) 88 89
T_ASSIGN (310) 12 26 83
T_PLUS_ASSIGN (311) 84
T_MINUS_ASSIGN (312) 85
T_PLUS_PLUS (313)
T_MINUS_MINUS (314)
T_ASTERISK (315) 101
T_DIVIDE (316) 102
T_MOD (317) 103
T_PLUS (318) 99
T_MINUS (319) 100 104
T_SIN (320) 117
T_COS (321) 118
T_TAN (322) 119
T_ASIN (323) 120
T_ACOS (324) 121
T_ATAN (325) 122
T_SQRT (326) 123
T_FLOOR (327) 125
T_ABS (328) 124
T_RANDOM (329) 126
T_LESS (330) 95
T_GREATER (331) 96
T_LESS_EQUAL (332) 93
T_GREATER_EQUAL (333) 94
T_EQUAL (334) 97
T_NOT_EQUAL (335) 98
T_AND (336) 92
T_OR (337) 91
T_NOT (338) 105
T_ID (339) 7 8 15 16 26 27 35 36 37 38 39 40 41 86 87 88 89
T_INT_CONSTANT (340) 110
T_DOUBLE_CONSTANT (341) 113
T_STRING_CONSTANT (342) 114
T_PRINT (343) 81
T_ERROR (344)
IF_NO_ELSE (345)
UNARY_OPS (346)


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
program (93)
    on left: 1, on right: 0
declaration_list (94)
    on left: 2 3, on right: 1 2
declaration (95)
    on left: 4 5 6, on right: 2
variable_declaration (96)
    on left: 7 8, on right: 4
simple_type (97)
    on left: 9 10 11, on right: 7 8
optional_initializer (98)
    on left: 12 13, on right: 7
object_declaration (99)
    on left: 15 16, on right: 5
@1 (100)
    on left: 14, on right: 15
object_type (101)
    on left: 17 18 19 20 21, on right: 15 16 36
parameter_list_or_empty (102)
    on left: 22 23, on right: 15
parameter_list (103)
    on left: 24 25, on right: 22 24
parameter (104)
    on left: 26, on right: 24 25
forward_declaration (105)
    on left: 27, on right: 6
block_list (106)
    on left: 28 29, on right: 1 28
block (107)
    on left: 30 31 32, on right: 28
initialization_block (108)
    on left: 33, on right: 30
animation_block (109)
    on left: 35, on right: 31
@2 (110)
    on left: 34, on right: 35
animation_parameter (111)
    on left: 36, on right: 27
check_animation_parameter (112)
    on left: 37 38 39 40 41, on right: 35
on_block (113)
    on left: 42, on right: 32
keystroke (114)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65, on right: 42
if_block (115)
    on left: 66 67, on right: 78 79
statement_block (116)
    on left: 68, on right: 33 42 67 80
statement_block_creator (117)
    on left: 69, on right: 66 68 80
end_of_statement_block (118)
    on left: 70, on right: 35 66 68 80
statement_list (119)
    on left: 71 72, on right: 35 68 71
statement (120)
    on left: 73 74 75 76 77, on right: 66 71
if_statement (121)
    on left: 78 79, on right: 73
for_statement (122)
    on left: 80, on right: 74
print_statement (123)
    on left: 81, on right: 76
exit_statement (124)
    on left: 82, on right: 77
assign_statement (125)
    on left: 83 84 85, on right: 75 80
variable (126)
    on left: 86 87 88 89, on right: 83 84 85 107 109
expression (127)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107, on right: 8 12 16 26 78 79 80 81 82 83 84 85 87 89 91
    92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 108
primary_expression (128)
    on left: 108 109 110 111 112 113 114, on right: 90
geometric_operator (129)
    on left: 115 116, on right: 107
math_operator (130)
    on left: 117 118 119 120 121 122 123 124 125 126,
    on right: 106
empty (131)
    on left: 127, on right: 3 13 23 29 72


state 0

    0 $accept: . program $end

    $default  reduce using rule 127 (empty)

    program           go to state 1
    declaration_list  go to state 2
    empty             go to state 3


state 1

    0 $accept: program . $end

    $end  shift, and go to state 4


state 2

    1 program: declaration_list . block_list
    2 declaration_list: declaration_list . declaration

    T_INT        shift, and go to state 5
    T_DOUBLE     shift, and go to state 6
    T_STRING     shift, and go to state 7
    T_TRIANGLE   shift, and go to state 8
    T_PIXMAP     shift, and go to state 9
    T_CIRCLE     shift, and go to state 10
    T_RECTANGLE  shift, and go to state 11
    T_TEXTBOX    shift, and go to state 12
    T_FORWARD    shift, and go to state 13

    $default  reduce using rule 127 (empty)

    declaration           go to state 14
    variable_declaration  go to state 15
    simple_type           go to state 16
    object_declaration    go to state 17
    object_type           go to state 18
    forward_declaration   go to state 19
    block_list            go to state 20
    empty                 go to state 21


state 3

    3 declaration_list: empty .

    $default  reduce using rule 3 (declaration_list)


state 4

    0 $accept: program $end .

    $default  accept


state 5

    9 simple_type: T_INT .

    $default  reduce using rule 9 (simple_type)


state 6

   10 simple_type: T_DOUBLE .

    $default  reduce using rule 10 (simple_type)


state 7

   11 simple_type: T_STRING .

    $default  reduce using rule 11 (simple_type)


state 8

   17 object_type: T_TRIANGLE .

    $default  reduce using rule 17 (object_type)


state 9

   18 object_type: T_PIXMAP .

    $default  reduce using rule 18 (object_type)


state 10

   19 object_type: T_CIRCLE .

    $default  reduce using rule 19 (object_type)


state 11

   20 object_type: T_RECTANGLE .

    $default  reduce using rule 20 (object_type)


state 12

   21 object_type: T_TEXTBOX .

    $default  reduce using rule 21 (object_type)


state 13

   27 forward_declaration: T_FORWARD . T_ANIMATION T_ID T_LPAREN animation_parameter T_RPAREN

    T_ANIMATION  shift, and go to state 22


state 14

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 15

    4 declaration: variable_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 23


state 16

    7 variable_declaration: simple_type . T_ID optional_initializer
    8                     | simple_type . T_ID T_LBRACKET expression T_RBRACKET

    T_ID  shift, and go to state 24


state 17

    5 declaration: object_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 25


state 18

   15 object_declaration: object_type . T_ID T_LPAREN @1 parameter_list_or_empty T_RPAREN
   16                   | object_type . T_ID T_LBRACKET expression T_RBRACKET

    T_ID  shift, and go to state 26


state 19

    6 declaration: forward_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 27


state 20

    1 program: declaration_list block_list .
   28 block_list: block_list . block

    T_INITIALIZATION  shift, and go to state 28
    T_ON              shift, and go to state 29
    T_ANIMATION       shift, and go to state 30

    $default  reduce using rule 1 (program)

    block                 go to state 31
    initialization_block  go to state 32
    animation_block       go to state 33
    on_block              go to state 34


state 21

   29 block_list: empty .

    $default  reduce using rule 29 (block_list)


state 22

   27 forward_declaration: T_FORWARD T_ANIMATION . T_ID T_LPAREN animation_parameter T_RPAREN

    T_ID  shift, and go to state 35


state 23

    4 declaration: variable_declaration T_SEMIC .

    $default  reduce using rule 4 (declaration)


state 24

    7 variable_declaration: simple_type T_ID . optional_initializer
    8                     | simple_type T_ID . T_LBRACKET expression T_RBRACKET

    T_LBRACKET  shift, and go to state 36
    T_ASSIGN    shift, and go to state 37

    $default  reduce using rule 127 (empty)

    optional_initializer  go to state 38
    empty                 go to state 39


state 25

    5 declaration: object_declaration T_SEMIC .

    $default  reduce using rule 5 (declaration)


state 26

   15 object_declaration: object_type T_ID . T_LPAREN @1 parameter_list_or_empty T_RPAREN
   16                   | object_type T_ID . T_LBRACKET expression T_RBRACKET

    T_LPAREN    shift, and go to state 40
    T_LBRACKET  shift, and go to state 41


state 27

    6 declaration: forward_declaration T_SEMIC .

    $default  reduce using rule 6 (declaration)


state 28

   33 initialization_block: T_INITIALIZATION . statement_block

    T_LBRACE  shift, and go to state 42

    statement_block  go to state 43


state 29

   42 on_block: T_ON . keystroke statement_block

    T_SPACE             shift, and go to state 44
    T_LEFTARROW         shift, and go to state 45
    T_RIGHTARROW        shift, and go to state 46
    T_UPARROW           shift, and go to state 47
    T_DOWNARROW         shift, and go to state 48
    T_LEFTMOUSE_DOWN    shift, and go to state 49
    T_MIDDLEMOUSE_DOWN  shift, and go to state 50
    T_RIGHTMOUSE_DOWN   shift, and go to state 51
    T_LEFTMOUSE_UP      shift, and go to state 52
    T_MIDDLEMOUSE_UP    shift, and go to state 53
    T_RIGHTMOUSE_UP     shift, and go to state 54
    T_MOUSE_MOVE        shift, and go to state 55
    T_MOUSE_DRAG        shift, and go to state 56
    T_F1                shift, and go to state 57
    T_AKEY              shift, and go to state 58
    T_SKEY              shift, and go to state 59
    T_DKEY              shift, and go to state 60
    T_FKEY              shift, and go to state 61
    T_HKEY              shift, and go to state 62
    T_JKEY              shift, and go to state 63
    T_KKEY              shift, and go to state 64
    T_LKEY              shift, and go to state 65
    T_WKEY              shift, and go to state 66

    keystroke  go to state 67


state 30

   35 animation_block: T_ANIMATION . T_ID T_LPAREN check_animation_parameter T_RPAREN T_LBRACE @2 statement_list T_RBRACE end_of_statement_block

    T_ID  shift, and go to state 68


state 31

   28 block_list: block_list block .

    $default  reduce using rule 28 (block_list)


state 32

   30 block: initialization_block .

    $default  reduce using rule 30 (block)


state 33

   31 block: animation_block .

    $default  reduce using rule 31 (block)


state 34

   32 block: on_block .

    $default  reduce using rule 32 (block)


state 35

   27 forward_declaration: T_FORWARD T_ANIMATION T_ID . T_LPAREN animation_parameter T_RPAREN

    T_LPAREN  shift, and go to state 69


state 36

    8 variable_declaration: simple_type T_ID T_LBRACKET . expression T_RBRACKET

    T_TRUE             shift, and go to state 70
    T_FALSE            shift, and go to state 71
    T_LPAREN           shift, and go to state 72
    T_MINUS            shift, and go to state 73
    T_SIN              shift, and go to state 74
    T_COS              shift, and go to state 75
    T_TAN              shift, and go to state 76
    T_ASIN             shift, and go to state 77
    T_ACOS             shift, and go to state 78
    T_ATAN             shift, and go to state 79
    T_SQRT             shift, and go to state 80
    T_FLOOR            shift, and go to state 81
    T_ABS              shift, and go to state 82
    T_RANDOM           shift, and go to state 83
    T_NOT              shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 90
    primary_expression  go to state 91
    math_operator       go to state 92


state 37

   12 optional_initializer: T_ASSIGN . expression

    T_TRUE             shift, and go to state 70
    T_FALSE            shift, and go to state 71
    T_LPAREN           shift, and go to state 72
    T_MINUS            shift, and go to state 73
    T_SIN              shift, and go to state 74
    T_COS              shift, and go to state 75
    T_TAN              shift, and go to state 76
    T_ASIN             shift, and go to state 77
    T_ACOS             shift, and go to state 78
    T_ATAN             shift, and go to state 79
    T_SQRT             shift, and go to state 80
    T_FLOOR            shift, and go to state 81
    T_ABS              shift, and go to state 82
    T_RANDOM           shift, and go to state 83
    T_NOT              shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 93
    primary_expression  go to state 91
    math_operator       go to state 92


state 38

    7 variable_declaration: simple_type T_ID optional_initializer .

    $default  reduce using rule 7 (variable_declaration)


state 39

   13 optional_initializer: empty .

    $default  reduce using rule 13 (optional_initializer)


state 40

   15 object_declaration: object_type T_ID T_LPAREN . @1 parameter_list_or_empty T_RPAREN

    $default  reduce using rule 14 (@1)

    @1  go to state 94


state 41

   16 object_declaration: object_type T_ID T_LBRACKET . expression T_RBRACKET

    T_TRUE             shift, and go to state 70
    T_FALSE            shift, and go to state 71
    T_LPAREN           shift, and go to state 72
    T_MINUS            shift, and go to state 73
    T_SIN              shift, and go to state 74
    T_COS              shift, and go to state 75
    T_TAN              shift, and go to state 76
    T_ASIN             shift, and go to state 77
    T_ACOS             shift, and go to state 78
    T_ATAN             shift, and go to state 79
    T_SQRT             shift, and go to state 80
    T_FLOOR            shift, and go to state 81
    T_ABS              shift, and go to state 82
    T_RANDOM           shift, and go to state 83
    T_NOT              shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 95
    primary_expression  go to state 91
    math_operator       go to state 92


state 42

   68 statement_block: T_LBRACE . statement_block_creator statement_list T_RBRACE end_of_statement_block

    $default  reduce using rule 69 (statement_block_creator)

    statement_block_creator  go to state 96


state 43

   33 initialization_block: T_INITIALIZATION statement_block .

    $default  reduce using rule 33 (initialization_block)


state 44

   43 keystroke: T_SPACE .

    $default  reduce using rule 43 (keystroke)


state 45

   46 keystroke: T_LEFTARROW .

    $default  reduce using rule 46 (keystroke)


state 46

   47 keystroke: T_RIGHTARROW .

    $default  reduce using rule 47 (keystroke)


state 47

   44 keystroke: T_UPARROW .

    $default  reduce using rule 44 (keystroke)


state 48

   45 keystroke: T_DOWNARROW .

    $default  reduce using rule 45 (keystroke)


state 49

   48 keystroke: T_LEFTMOUSE_DOWN .

    $default  reduce using rule 48 (keystroke)


state 50

   49 keystroke: T_MIDDLEMOUSE_DOWN .

    $default  reduce using rule 49 (keystroke)


state 51

   50 keystroke: T_RIGHTMOUSE_DOWN .

    $default  reduce using rule 50 (keystroke)


state 52

   51 keystroke: T_LEFTMOUSE_UP .

    $default  reduce using rule 51 (keystroke)


state 53

   52 keystroke: T_MIDDLEMOUSE_UP .

    $default  reduce using rule 52 (keystroke)


state 54

   53 keystroke: T_RIGHTMOUSE_UP .

    $default  reduce using rule 53 (keystroke)


state 55

   54 keystroke: T_MOUSE_MOVE .

    $default  reduce using rule 54 (keystroke)


state 56

   55 keystroke: T_MOUSE_DRAG .

    $default  reduce using rule 55 (keystroke)


state 57

   65 keystroke: T_F1 .

    $default  reduce using rule 65 (keystroke)


state 58

   56 keystroke: T_AKEY .

    $default  reduce using rule 56 (keystroke)


state 59

   57 keystroke: T_SKEY .

    $default  reduce using rule 57 (keystroke)


state 60

   58 keystroke: T_DKEY .

    $default  reduce using rule 58 (keystroke)


state 61

   59 keystroke: T_FKEY .

    $default  reduce using rule 59 (keystroke)


state 62

   60 keystroke: T_HKEY .

    $default  reduce using rule 60 (keystroke)


state 63

   61 keystroke: T_JKEY .

    $default  reduce using rule 61 (keystroke)


state 64

   62 keystroke: T_KKEY .

    $default  reduce using rule 62 (keystroke)


state 65

   63 keystroke: T_LKEY .

    $default  reduce using rule 63 (keystroke)


state 66

   64 keystroke: T_WKEY .

    $default  reduce using rule 64 (keystroke)


state 67

   42 on_block: T_ON keystroke . statement_block

    T_LBRACE  shift, and go to state 42

    statement_block  go to state 97


state 68

   35 animation_block: T_ANIMATION T_ID . T_LPAREN check_animation_parameter T_RPAREN T_LBRACE @2 statement_list T_RBRACE end_of_statement_block

    T_LPAREN  shift, and go to state 98


state 69

   27 forward_declaration: T_FORWARD T_ANIMATION T_ID T_LPAREN . animation_parameter T_RPAREN

    T_TRIANGLE   shift, and go to state 8
    T_PIXMAP     shift, and go to state 9
    T_CIRCLE     shift, and go to state 10
    T_RECTANGLE  shift, and go to state 11
    T_TEXTBOX    shift, and go to state 12

    object_type          go to state 99
    animation_parameter  go to state 100


state 70

  111 primary_expression: T_TRUE .

    $default  reduce using rule 111 (primary_expression)


state 71

  112 primary_expression: T_FALSE .

    $default  reduce using rule 112 (primary_expression)


state 72

  108 primary_expression: T_LPAREN . expression T_RPAREN

    T_TRUE             shift, and go to state 70
    T_FALSE            shift, and go to state 71
    T_LPAREN           shift, and go to state 72
    T_MINUS            shift, and go to state 73
    T_SIN              shift, and go to state 74
    T_COS              shift, and go to state 75
    T_TAN              shift, and go to state 76
    T_ASIN             shift, and go to state 77
    T_ACOS             shift, and go to state 78
    T_ATAN             shift, and go to state 79
    T_SQRT             shift, and go to state 80
    T_FLOOR            shift, and go to state 81
    T_ABS              shift, and go to state 82
    T_RANDOM           shift, and go to state 83
    T_NOT              shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 101
    primary_expression  go to state 91
    math_operator       go to state 92


state 73

  104 expression: T_MINUS . expression

    T_TRUE             shift, and go to state 70
    T_FALSE            shift, and go to state 71
    T_LPAREN           shift, and go to state 72
    T_MINUS            shift, and go to state 73
    T_SIN              shift, and go to state 74
    T_COS              shift, and go to state 75
    T_TAN              shift, and go to state 76
    T_ASIN             shift, and go to state 77
    T_ACOS             shift, and go to state 78
    T_ATAN             shift, and go to state 79
    T_SQRT             shift, and go to state 80
    T_FLOOR            shift, and go to state 81
    T_ABS              shift, and go to state 82
    T_RANDOM           shift, and go to state 83
    T_NOT              shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 102
    primary_expression  go to state 91
    math_operator       go to state 92


state 74

  117 math_operator: T_SIN .

    $default  reduce using rule 117 (math_operator)


state 75

  118 math_operator: T_COS .

    $default  reduce using rule 118 (math_operator)


state 76

  119 math_operator: T_TAN .

    $default  reduce using rule 119 (math_operator)


state 77

  120 math_operator: T_ASIN .

    $default  reduce using rule 120 (math_operator)


state 78

  121 math_operator: T_ACOS .

    $default  reduce using rule 121 (math_operator)


state 79

  122 math_operator: T_ATAN .

    $default  reduce using rule 122 (math_operator)


state 80

  123 math_operator: T_SQRT .

    $default  reduce using rule 123 (math_operator)


state 81

  125 math_operator: T_FLOOR .

    $default  reduce using rule 125 (math_operator)


state 82

  124 math_operator: T_ABS .

    $default  reduce using rule 124 (math_operator)


state 83

  126 math_operator: T_RANDOM .

    $default  reduce using rule 126 (math_operator)


state 84

  105 expression: T_NOT . expression

    T_TRUE             shift, and go to state 70
    T_FALSE            shift, and go to state 71
    T_LPAREN           shift, and go to state 72
    T_MINUS            shift, and go to state 73
    T_SIN              shift, and go to state 74
    T_COS              shift, and go to state 75
    T_TAN              shift, and go to state 76
    T_ASIN             shift, and go to state 77
    T_ACOS             shift, and go to state 78
    T_ATAN             shift, and go to state 79
    T_SQRT             shift, and go to state 80
    T_FLOOR            shift, and go to state 81
    T_ABS              shift, and go to state 82
    T_RANDOM           shift, and go to state 83
    T_NOT              shift, and go to state 84
    T_ID               shift, and go to state 85
    T_INT_CONSTANT     shift, and go to state 86
    T_DOUBLE_CONSTANT  shift, and go to state 87
    T_STRING_CONSTANT  shift, and go to state 88

    variable            go to state 89
    expression          go to state 103
    primary_expression  go to state 91
    math_operator       go to state 92


state 85

   86 variable: T_ID .
   87         | T_ID . T_LBRACKET expression T_RBRACKET
   88         | T_ID . T_PERIOD T_ID
   89         | T_ID . T_LBRACKET expression T_RBRACKET T_PERIOD T_ID

    T_LBRACKET  shift, and go to state 104
    T_PERIOD    shift, and go to state 105

    $default  reduce using rule 86 (variable)


state 86

  110 primary_expression: T_INT_CONSTANT .

    $default  reduce using rule 110 (primary_expression)


state 87

  113 primary_expression: T_DOUBLE_CONSTANT .

    $default  reduce using rule 113 (primary_expression)


state 88

  114 primary_expression: T_STRING_CONSTANT .

    $default  reduce using rule 114 (primary_expression)


state 89

  107 expression: variable . geometric_operator variable
  109 primary_expression: variable .

    T_TOUCHES  shift, and go to state 106
    T_NEAR     shift, and go to state 107

    $default  reduce using rule 109 (primary_expression)

    geometric_operator  go to state 108


state 90

    8 variable_declaration: simple_type T_ID T_LBRACKET expression . T_RBRACKET
   91 expression: expression . T_OR expression
   92           | expression . T_AND expression
   93           | expression . T_LESS_EQUAL expression
   94           | expression . T_GREATER_EQUAL expression
   95           | expression . T_LESS expression
   96           | expression . T_GREATER expression
   97           | expression . T_EQUAL expression
   98           | expression . T_NOT_EQUAL expression
   99           | expression . T_PLUS expression
  100           | expression . T_MINUS expression
  101           | expression . T_ASTERISK expression
  102           | expression . T_DIVIDE expression
  103           | expression . T_MOD expression

    T_RBRACKET       shift, and go to state 109
    T_ASTERISK       shift, and go to state 110
    T_DIVIDE         shift, and go to state 111
    T_MOD            shift, and go to state 112
    T_PLUS           shift, and go to state 113
    T_MINUS          shift, and go to state 114
    T_LESS           shift, and go to state 115
    T_GREATER        shift, and go to state 116
    T_LESS_EQUAL     shift, and go to state 117
    T_GREATER_EQUAL  shift, and go to state 118
    T_EQUAL          shift, and go to state 119
    T_NOT_EQUAL      shift, and go to state 120
    T_AND            shift, and go to state 121
    T_OR             shift, and go to state 122


state 91

   90 expression: primary_expression .

    $default  reduce using rule 90 (expression)


state 92

  106 expression: math_operator . T_LPAREN expression T_RPAREN

    T_LPAREN  shift, and go to state 123


state 93

   12 optional_initializer: T_ASSIGN expression .
   91 expression: expression . T_OR expression
   92           | expression . T_AND expression
   93           | expression . T_LESS_EQUAL expression
   94           | expression . T_GREATER_EQUAL expression
   95           | expression . T_LESS expression
   96           | expression . T_GREATER expression
   97           | expression . T_EQUAL expression
   98           | expression . T_NOT_EQUAL expression
   99           | expression . T_PLUS expression
  100           | expression . T_MINUS expression
  101           | expression . T_ASTERISK expression
  102           | expression . T_DIVIDE expression
  103           | expression . T_MOD expression

    T_ASTERISK       shift, and go to state 110
    T_DIVIDE         shift, and go to state 111
    T_MOD            shift, and go to state 112
    T_PLUS           shift, and go to state 113
    T_MINUS          shift, and go to state 114
    T_LESS           shift, and go to state 115
    T_GREATER        shift, and go to state 116
    T_LESS_EQUAL     shift, and go to state 117
    T_GREATER_EQUAL  shift, and go to state 118
    T_EQUAL          shift, and go to state 119
    T_NOT_EQUAL      shift, and go to state 120
    T_AND            shift, and go to state 121
    T_OR             shift, and go to state 122

    $default  reduce using rule 12 (optional_initializer)


state 94

   15 object_declaration: object_type T_ID T_LPAREN @1 . parameter_list_or_empty T_RPAREN

    T_ID  shift, and go to state 124

    $default  reduce using rule 127 (empty)

    parameter_list_or_empty  go to state 125
    parameter_list           go to state 126
    parameter                go to state 127
    empty                    go to state 128


state 95

   16 object_declaration: object_type T_ID T_LBRACKET expression . T_RBRACKET
   91 expression: expression . T_OR expression
   92           | expression . T_AND expression
   93           | expression . T_LESS_EQUAL expression
   94           | expression . T_GREATER_EQUAL expression
   95           | expression . T_LESS expression
   96           | expression . T_GREATER expression
   97           | expression . T_EQUAL expression
   98           | expression . T_NOT_EQUAL expression
   99           | expression . T_PLUS expression
  100           | expression . T_MINUS expression
  101           | expression . T_ASTERISK expression
  102           | expression . T_DIVIDE expression
  103           | expression . T_MOD expression

    T_RBRACKET       shift, and go to state 129
    T_ASTERISK       shift, and go to state 110
    T_DIVIDE         shift, and go to state 111
    T_MOD            shift, and go to state 112
    T_PLUS           shift, and go to state 113
    T_MINUS          shift, and go to state 114
    T_LESS           shift, and go to state 115
    T_GREATER        shift, and go to state 116
    T_LESS_EQUAL     shift, and go to state 117
    T_GREATER_EQUAL  shift, and go to state 118
    T_EQUAL          shift, and go to state 119
    T_NOT_EQUAL      shift, and go to state 120
    T_AND            shift, and go to state 121
    T_OR             shift, and go to state 122


state 96

   68 statement_block: T_LBRACE statement_block_creator . statement_list T_RBRACE end_of_statement_block

    $default  reduce using rule 127 (empty)
